[package]
name = "genovaranno"
version = "0.1.0"
edition = "2024"

[dependencies]
android_logger = "0.15.0"
clap = { version = "4.5.32", features = ["derive"] }
cmd_lib = "1.9.5"
dotenv = "0.15.0"
eframe = "0.31.1"
egui-file-dialog = "0.10.0"
egui-multiwin = "0.5.2"
egui_extras = "0.31.1"
egui_form = "0.5.0"
log = "0.4.27"
postgres = "0.19.10"
printpdf = { version = "0.8.2", features = ["html", "jpeg", "png", "rayon", "text_layout", "tiff"] }
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
sqlite = "0.37.0"
winit = "0.30.11"
